--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@ margin-right:20px;
 </style>
 </head>
 <body bgcolor="#eee" onload="init()">
-<span>pattern size<span><input type=number id="input1" value="3">show pattern editor<input type="checkbox" id="check" onchange="updatefloat()"><br>
-<table id="float"></table>
+<span>pattern size<span><input type=number id="input1" value="3" onchange="updatefloat()">
+show pattern editor<input type="checkbox" id="check" onchange="updatefloat()"><br><table id="float"></table>
 <canvas height="600" width="1000" id="can0" onclick="draw()"></canvas>
 
 </body>
